--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,14 +7,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #342a28;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,13 +24,4 @@
 .Header {
   background-color: grey;
 
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
