--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background: #17141d;
+  /* background: #342a28; */
+  background-size: cover;
+}
+
 .App {
   text-align: center;
 }
@@ -22,6 +28,5 @@
   color: #61dafb;
 }
 .Header {
-  background-color: grey;
-
+  background-color: lightgray;
 }
