--- a/client/src/styles/projects.css
+++ b/client/src/styles/projects.css
@@ -2,40 +2,67 @@
   padding-inline-start: none;
 }
 
-.listCards {
-  border: 5px solid black;
+.linkedProjects {
+  border:3px solid maroon;
+  width: 10vw;
+  display: inline-block;
+  vertical-align: top;
+  justify-content: center;
+  margin: 20px 100px;
+  border-radius: 5px;
+  padding:5px;
+  background-color: white;
+  /* background: left url("../../public/background.png"), lightgray; */
+  box-shadow: 3px 3px 0px 0px;
+  /* background-size: 100% 197.8%;
+    background-image: linear-gradient(to top, white 50%, maroon 50%);
+    -webkit-transition: background-position .1s;
+    -moz-transition: background-position .1s;
+    transition: background-position .1s; */
 }
 
-.projectLinks {
-  
+.linkedProjects:hover {
+  color:maroon;
+  /* background-position: 0 -100%; */
+  transform: scale(1.1);
+  transition: all 300ms;
+  box-shadow: 3px 3px 0px 0px black;
+  /* text-shadow: 0px 0px 3px red;
+  box-shadow: 0px 0px 3px red; */
 }
 
 .listCards button {
   border: 2px solid maroon;
-  color: black;
+  color: maroon;
   border-radius: 50px;
   /* color:red; */
   display: inline-block;
   width: 8vw;
   height:4.5vh;
-  margin: 20px 200px;
-  background-size: 100% 197.9%;
-    background-image: linear-gradient(to top, #17141d 50%, maroon 50%);
+  margin: 20px 125px;
+  background-color: lightgray;
+  /* background-size: 100% 197.9%;
+    background-image: linear-gradient(to bottom, white 50%, maroon 50%);
     -webkit-transition: background-position .1s;
     -moz-transition: background-position .1s;
-    transition: background-position .1s;
+    transition: background-position .1s; */
 }
 
+
 .listCards button:hover {
-  color:maroon;
-  background-position: 0 -100%;
-  text-shadow: 0px 0px 3px red;
-  box-shadow: 0px 0px 3px red;
+  color:white;
+  transform: scale(1.1);
+  transition: all 300ms;
+  /* background-position: 0 -100%; */
+  /* text-shadow: 0px 0px 3px red;
+  box-shadow: 0px 0px 3px red; */
 }
 
 .listCards h1 {
-  color: white;
-  text-decoration: underline;
+  color: maroon;
+  font-family: cursive-redx;
+  font-size: 60px;
+  text-shadow: 2px 2px black;
 }
 
 .cardContainer {
@@ -52,6 +79,9 @@ a:hover{
   color:maroon;
 }
 
+.linkedProjects a {
+  color: maroon;
+}
 /* a {
   color:white;
   background-image: linear-gradient(
