Fix ability to submit new request

--- a/client/src/styles/requests.css
+++ b/client/src/styles/requests.css
@@ -45,8 +45,12 @@
 }
 
 .requests table {
+  border: solid maroon 1px;
   text-align: left;
-  float: left;
-  padding-left: 100px;
-  padding-right: 100px;
+  margin: 1em
+}
+
+.requests td, .requests th {
+  border: solid maroon 1px;
+  padding: 0.5em
 }
