--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -26,6 +26,8 @@
   font-family: cursive-redx;
   color: maroon;
   font-size: x-large;
+  /* margin-left:auto;
+  margin-right:auto; */
 }
 
 .Header a:hover {
