--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -6,8 +6,7 @@
   height: 80px;
   border-bottom: solid 7px maroon;
   border-bottom-style:double;
-  /* font-size: 2em; */
-  background: bottom url("../../public/background.png"), lightgray;
+  background: bottom/cover url("../../public/coffee.png"), lightgray;
 }
 
 .Header h1 {
@@ -26,8 +25,6 @@
   font-family: cursive-redx;
   color: maroon;
   font-size: x-large;
-  /* margin-left:auto;
-  margin-right:auto; */
 }
 
 .Header a:hover {
