--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,8 +4,7 @@
 }
 
 body {
-  background: url("../public/coffee.png"), #FFFBF0;
-  background-size: cover;
+  background: url(../public/topo.svg), #fed;
 }
 
 .App {
