--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,42 +3,38 @@
   src: url("../public/DancingScript-VariableFont_wght.ttf")
 }
 
+a.gitlab::before {
+  content: url("../public/beaker.svg");
+}
+
 body {
   background: url(../public/topo.svg), #fed;
 }
 
-.App {
+main {
+  height: 90vh;
   text-align: center;
-}
-
-.App-header {
-  background: url("../public/coffee.png") cover, #FFFBF0;
-  background-size: cover;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  /* margin-top: -14.5px; */
+  overflow-y: auto;
 }
 
-.App-header .home-welcome {
+.home-welcome {
   font-family: cursive-redx;
   color: maroon;
   font-size: 75px;
   text-shadow: 3px 3px black;
 }
 
-.App-header .home-header-3 {
+header h3 {
   color:black;
   font-size: 20px;
 }
 
-/* .banner {
-  width: 100%;
-  height: 400px;
-  background: ;
-  background-position: center;
-} */
+form p {
+  margin: 0.5em;
+}
+
+.HeaderTitle, .buttonContainer {
+  width: 220px
+}
