--- a/client/src/styles/projects.css
+++ b/client/src/styles/projects.css
@@ -4,11 +4,11 @@
 
 .linkedProjects {
   border:3px solid maroon;
-  width: 10vw;
+  width: 150px;
   display: inline-block;
   vertical-align: top;
   justify-content: center;
-  margin: 20px 100px;
+  margin: 20px;
   border-radius: 5px;
   padding:5px;
   background-color: lightgray;
