--- a/client/src/styles/requests.css
+++ b/client/src/styles/requests.css
@@ -91,3 +91,18 @@
   font-size: 60px;
   text-shadow: 2px 2px black;  
 }
+
+.newRequest .button {
+  border: 2px solid maroon;
+  color: maroon;
+  border-radius: 50px;
+  width: 8vw;
+  height:4.5vh;
+  background-color: lightgray;
+}
+
+.newRequest .button:hover {
+  color:white;
+  transform: scale(1.1);
+  transition: all 300ms;
+}
